pulse/share/pulse/examples/dice/cbor/extern/CBOR_Pulse_Extern.rs

extern "C" {
    pub fn cbor_destr_int64(c: cbor) -> cbor_int;
}
extern "C" {
    pub fn cbor_constr_int64(ty: u8, value: u64) -> cbor;
}
#[repr(C)]
#[derive(Copy, Clone)]
pub struct cbor_tagged_s {
    pub cbor_tagged_tag: u64,
    pub cbor_tagged_payload: cbor,
}
#[test]
fn bindgen_test_layout_cbor_tagged_s() {
    const UNINIT: ::std::mem::MaybeUninit<cbor_tagged_s> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<cbor_tagged_s>(),
        40usize,
        concat!("Size of: ", stringify!(cbor_tagged_s))
    );
    assert_eq!(
        ::std::mem::align_of::<cbor_tagged_s>(),
        8usize,
        concat!("Alignment of ", stringify!(cbor_tagged_s))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).cbor_tagged_tag) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(cbor_tagged_s),
            "::",
            stringify!(cbor_tagged_tag)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).cbor_tagged_payload) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(cbor_tagged_s),
            "::",
            stringify!(cbor_tagged_payload)
        )
    );
}
pub type cbor_tagged = cbor_tagged_s;
extern "C" {
    pub fn cbor_destr_tagged(a: cbor) -> cbor_tagged;
}
extern "C" {
    pub fn cbor_constr_tagged(tag: u64, a: *mut cbor) -> cbor;
}
extern "C" {
    pub fn cbor_map_length(a: cbor) -> u64;
}
extern "C" {
    pub static mut cbor_dummy_map_iterator: cbor_map_iterator_t;
}
extern "C" {
    pub fn cbor_constr_map(a: *mut cbor_map_entry, len: u64) -> cbor;
}
extern "C" {
    pub fn cbor_map_iterator_init(a: cbor) -> cbor_map_iterator_t;
}
extern "C" {
    pub fn cbor_map_iterator_is_done(i: cbor_map_iterator_t) -> bool;
}
extern "C" {
    pub fn cbor_map_iterator_next(pi: *mut cbor_map_iterator_t) -> cbor_map_entry;
}
#[repr(C)]
#[derive(Copy, Clone)]
pub struct cbor_read_t_s {
    pub cbor_read_is_success: bool,
    pub cbor_read_payload: cbor,
    pub cbor_read_remainder: *mut u8,
    pub cbor_read_remainder_length: usize,
}
#[test]
fn bindgen_test_layout_cbor_read_t_s() {
    const UNINIT: ::std::mem::MaybeUninit<cbor_read_t_s> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<cbor_read_t_s>(),
        56usize,
        concat!("Size of: ", stringify!(cbor_read_t_s))
    );
    assert_eq!(
        ::std::mem::align_of::<cbor_read_t_s>(),
        8usize,
        concat!("Alignment of ", stringify!(cbor_read_t_s))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).cbor_read_is_success) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(cbor_read_t_s),
            "::",
            stringify!(cbor_read_is_success)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).cbor_read_payload) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(cbor_read_t_s),
            "::",
            stringify!(cbor_read_payload)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).cbor_read_remainder) as usize - ptr as usize },
        40usize,
        concat!(
            "Offset of field: ",
            stringify!(cbor_read_t_s),
            "::",
            stringify!(cbor_read_remainder)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).cbor_read_remainder_length) as usize - ptr as usize },
        48usize,
        concat!(
            "Offset of field: ",
            stringify!(cbor_read_t_s),
            "::",
            stringify!(cbor_read_remainder_length)
        )
    );
}
pub type cbor_read_t = cbor_read_t_s;
extern "C" {
    pub fn cbor_read(a: *mut u8, sz: usize) -> cbor_read_t;
}
extern "C" {
    pub fn cbor_read_deterministically_encoded(a: *mut u8, sz: usize) -> cbor_read_t;
}
